# EpilepsyPreventionCheck

src/: Cargo.toml
src/src/: main  main.rs  settings.rs  startup.sh
