[package]
name = "EpilepsyPrevention"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 #bi_d-S-S-S (Sound, sight, scope)

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"

[workspace]
members = ["src/main.rs", "src/settings.rs"]

